fpp_parser/src/tests/embedded-tab.ref.txt
error: syntax error
 --> [ local path prefix ]/embedded-tab.fpp:1:1
  |
1 |     
  | ^^^^ invalid character '\t'

